<resources>
    <string name="app_name">Yamba</string>
    <string name="titleStatus">Enter your status</string>
    <string name="submit_status_button">Submit status</string>
    <string name="titleUsername">Username</string>
    <string name="summaryUsername">Username</string>
    <string name="titlePassword">Password</string>
    <string name="summaryPassword">Enter Password</string>
    <string name="titleApiRoot">API Root address</string>
    <string name="summaryApiRoot">Enter API Root address</string>
    <string name="titlePrefs">Preferences</string>
    <string name="titleServiceStart">Start Service</string>
    <string name="titleServiceStop">Stop service</string>
    <string name="timelineHeader">Timeline</string>
    <string name="titleGoToTimeline">Go to Timeline</string>
    <string name="titleGoToStatus">Go to Status</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="msgLastTimelineUpdate">last time update</string>
    <string name="titleProvider">Location providers</string>
    <string name="summaryProvider">List of available location provider to select from</string>
    <string name="titleRefresh">Refresh</string>
    titleRefresh
    <string-array name="providers">
        <item>None, please</item>
        <item>GPS via satellites</item>
        <item>Mobile Network will do</item>
    </string-array>
    <string-array name="providerValues">
        <item>NONE</item>
        <item>gsp</item>
        <item>network</item>
    </string-array>
    <string-array name="interval">
        <item>Never</item>
        <item>Fifteen minutes</item>
        <item>Half hour</item>
        <item>An hour</item>
        <item>Half day</item>
        <item>Day</item>
    </string-array>
    <string-array name="intervalValues">
        <item>0</item>
        <item>60000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>43200000</item>
        <item>86400000</item>
    </string-array>
    <string name="msgNotificationTitle">New Twitter updates</string>
    <string name="msgNotificationMessage">Received new Twitter updated, click to view</string>

</resources>
