<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/itemPrefs" android:title="@string/titlePrefs"
        android:icon="@android:drawable/ic_menu_preferences"></item>
    <item android:title="@string/titleServiceStart" android:id="@+id/itemServiceStart"
        android:icon="@android:drawable/ic_media_play"></item> <!-- -->
    <item android:title="@string/titleServiceStop" android:id="@+id/itemServiceStop"
        android:icon="@android:drawable/ic_media_pause"></item> <!-- -->
    <item android:title="@string/titleGoToTimeline" android:id="@+id/itemGoTotimeline"
        android:icon="@android:drawable/ic_menu_preferences"></item>
    <item android:title="@string/titleGoToStatus" android:id="@+id/itemGoToStatus"
        android:icon="@android:drawable/ic_menu_preferences"></item>



</menu>